<resources>
    <!--   File Name  -->
    <string name="FileName">BoxType.txt</string>
    <string name="LogFile">BCTLogs.txt</string>
    <!-- For layout class -->
    <string name="app_name">Box Calculator Two</string>
    <string name="SearchFromTreeMapButton">Search</string>
    <string name="SearchByNameButton">Search by name</string>
    <string name="BoxVolumeTextView">Box Volume</string>
    <string name="TileInBoxTextView">Tiles in box</string>
    <string name="SquareTextView">Required area</string>
    <string name="RequiredPiecesTextView">Required pieces</string>
    <string name="CalculateByMButton">Calculate by area</string>
    <string name="CalculateByPiecesButton">Calculate by pieces</string>
    <string name="CalculateByPackButton">Calculate by packs</string>
    <string name="TileSquareTextView">Calculated square (multiplicity of a piece)</string>
    <string name="PackagingBoxTextView">Quantity packages and pieces</string>
    <string name="PackInfoTextView">packages</string>
    <string name="TilesInfoNameTextView">pieces</string>
    <string name="ShowHistoryAndAddingButton">History and Adding</string>
    <string name="ShowHistoryButton">History</string>
    <string name="DownloadButton">Download data</string>
    <string name="BackToMainScreenButton">Back to main screen</string>
    <string name="UploadDataButton">Upload Data</string>
    <string name="AddDataToBase">Add Article</string>
    <string name="ArticleTextView">Article</string>
    <string name="DescriptionBoxTextView">Description</string>
    <string name="ShowHelpButton">Show example of filling text</string>
    <string name="ToDrawButton">Drawing</string>


    <!-- For layout tile calculator -->
    <string name="AreaLengthText">Area length (M2)</string>
    <string name="AreaWidthText">Area width (M2)</string>
    <string name="TileLengthText">Tile length (cm.)</string>
    <string name="TileWidthText">Tile width (cm.)</string>
    <string name="OffsetText">Offset in percent (%)</string>
    <string name="CenteringSwitch">Centering</string>
    <string name="UsingRemnantSwitch">Using remnant</string>
    <string name="AlongLongSideSwitch">Along long side</string>
    <string name="TileOrLaminateSwitch">Tile / Laminate</string>
    <string name="SearchTilesByAreaButton">Search tiles by area</string>
    <string name="SearchTilesResultText">Result (pcs)</string>
    <string name="BackButton">Back</string>
    <string name="ShowPlanButton">Show plan</string>


    <!-- For java class -->
    <string name="ExampleOfFillingText">
        1111 ~ name1 ~ 1.1 ~ 11\n
        2222 ~ name2 ~ 2.2 ~ 22\n
        3333 ~ name3 ~ 3.3 ~ 33\n
        4444 ~ name4 ~ 4.4 ~ 44\n
        5555 ~ name5 ~ 5.5 ~ 55\n
        article (max 9 chars) ~ name ~ \n
        volume (max 7 chars)~ \n
        pieces (max 3 chars) (Enter - newline char)
    </string>
    <string name="EmptyHistoryMessage">History is empty</string>
    <string name="EmptyFieldsMessage">Some fields are empty</string>
    <string name="AddedMessage">DATA ADDED</string>
    <string name="HistoryMessageFirst">For </string>
    <string name="HistoryMessageByM"> m2 multiple tiles, You need to write: </string>
    <string name="HistoryMessageByPackages"> m2 multiple of packages, You need to write</string>
    <string name="HistoryMessageByPieces"> pcs, You need to write</string>
    <string name="HistoryMessageSecond"> m2. This is </string>
    <string name="HistoryMessagePack"> packs and </string>
    <string name="HistoryMessagePcs"> pcs.</string>
    <string name="HistoryMessagePackByPack"> packs.</string>
    <string name="EmptySearchByArticleMessage">This article is not in the database</string>
    <string name="EmptySearchByNameMessage">There are no results for this search</string>
    <string name="ZeroValueInPiecesMessage">There can not be 0 pieces per pack</string>
    <string name="ZeroValueInVolumeMessage">There can not be 0 m2 per pack</string>
    <string name="UploadedDataMessage">Data is uploaded</string>
    <string name="InvalidData">Invalid data provided</string>
    <string name="UnknownData">I\'m sorry but we can\'t figure it out yet.</string>
</resources>