<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".historypack.HistoryAndAdd">
    <Button
        android:id="@+id/BackToMainScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/BackToMainScreenButton"
        style="@style/BackToMainScreenBUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ShowHistoryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/ShowHistoryButton"
        style="@style/ShowHistoryBUTTON"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackToMainScreen" />

    <Button
        android:id="@+id/AddArticleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:text="@string/AddDataToBase"
        style="@style/AddArticleBUTTON"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackToMainScreen" />

    <TextView
        android:id="@+id/ArticleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/TEXT"
        android:text="@string/ArticleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowHistoryButton" />

    <TextView
        android:id="@+id/DescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/TEXT"
        android:text="@string/DescriptionBoxTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArticleAdd" />

    <TextView
        android:id="@+id/BoxVolumeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        style="@style/TEXT"
        android:text="@string/BoxVolumeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionAdd" />

    <TextView
        android:id="@+id/TilesCounterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        style="@style/TEXT"
        android:text="@string/TileInBoxTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionAdd" />

    <EditText
        android:id="@+id/ArticleAdd"
        style="@style/TEXT"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="9"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArticleTextView" />

    <EditText
        android:id="@+id/DescriptionAdd"
        style="@style/TEXT"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView" />

    <EditText
        android:id="@+id/BoxVolumeAdd"
        style="@style/TEXT"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="7"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BoxVolumeTextView" />

    <EditText
        android:id="@+id/TilesCounterAdd"
        style="@style/TEXT"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:maxLength="3"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TilesCounterTextView" />

    <TextView
        android:id="@+id/HistoryText"
        style="@style/TEXT"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowHistoryButton" />

    <Button
        android:id="@+id/DownloadButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="16dp"
        android:text="@string/DownloadButton"
        style="@style/DownloadBUTTON"
        app:layout_constraintBottom_toTopOf="@+id/ShowHelpButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/UploadDataButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/UploadDataButton"
        style="@style/UploadDataBUTTON"
        app:layout_constraintBottom_toTopOf="@+id/ShowHelpButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ShowHelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/ShowHelpButton"
        style="@style/ShowHelpBUTTON"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>